# aas-core3.1-python

./: .gitignore  .readthedocs.yml  AUTHORS  LICENSE  README.rst  pyproject.toml  requirements-dev.txt
aas_core3_1/: __init__.py  constants.py  (+5 more)
dev/: pyproject.toml
dev/continuous_integration/: check_init_and_pyproject_toml_consistent.py  precommit.py  pylint.rc
dev/dev_scripts/: download_aas_core_meta_model.py  download_latest_test_data.py  pyproject.toml  regenerate_code.py  rerecord_tests.py  update_all.py  update_to_aas_core_meta_codegen.py
dev/dev_scripts/codegen/: codegen.py
dev/test_data/Json/ContainedInEnvironment/Unexpected/Invalid/MaxLengthViolation/AssetInformation/: assetType.json.errors
dev/test_data/Json/ContainedInEnvironment/Unexpected/Invalid/MaxLengthViolation/File/: value.json.errors
dev/test_data/descend_and_pass_through_visitor/Submodel/: maximal.json.trace
dev/test_data/descend_and_pass_through_visitor/administrativeInformation/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/annotatedRelationshipElement/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/assetAdministrationShell/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/basicEventElement/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/blob/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/conceptDescription/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/dataSpecificationIec61360/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/entity/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/environment/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/extension/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/multiLanguageProperty/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/operation/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/property/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/qualifier/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/relationshipElement/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/submodel/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/submodelElementCollection/: maximal.xml.trace
dev/test_data/descend_and_pass_through_visitor/submodelElementList/: maximal.xml.trace
dev/test_data/descend_once/administrativeInformation/: maximal.xml.trace
dev/test_data/descend_once/annotatedRelationshipElement/: maximal.xml.trace
dev/test_data/descend_once/assetAdministrationShell/: maximal.xml.trace
dev/test_data/descend_once/assetInformation/: maximal.xml.trace
dev/test_data/descend_once/basicEventElement/: maximal.xml.trace
dev/test_data/descend_once/conceptDescription/: maximal.xml.trace
dev/test_data/descend_once/dataSpecificationIec61360/: maximal.xml.trace
dev/test_data/descend_once/entity/: maximal.xml.trace
dev/test_data/descend_once/environment/: maximal.xml.trace
dev/test_data/descend_once/extension/: maximal.xml.trace
dev/test_data/descend_once/file/: maximal.xml.trace
dev/test_data/descend_once/multiLanguageProperty/: maximal.xml.trace
dev/test_data/descend_once/operation/: maximal.xml.trace
dev/test_data/descend_once/operationVariable/: maximal.xml.trace
dev/test_data/descend_once/referenceElement/: maximal.xml.trace
dev/test_data/descend_once/submodel/: maximal.xml.trace
dev/test_data/descend_once/submodelElementCollection/: maximal.xml.trace
dev/test_data/descend_once/submodelElementList/: maximal.xml.trace
dev/test_data/test_X_or_default/extension/on_maximal.xml/: value_type_or_default.trace
dev/test_data/test_X_or_default/qualifier/on_maximal.xml/: kind_or_default.trace
dev/test_data/test_over_X_or_empty/annotatedRelationshipElement/on_maximal.xml/: over_annotations_or_empty.trace
dev/test_data/test_over_X_or_empty/assetAdministrationShell/on_maximal.xml/: over_submodels_or_empty.trace
dev/test_data/test_over_X_or_empty/blob/on_maximal.xml/: over_extensions_or_empty.trace
dev/test_data/test_over_X_or_empty/capability/on_maximal.xml/: over_supplemental_semantic_ids_or_empty.trace
dev/test_data/test_over_X_or_empty/entity/on_maximal.xml/: over_specific_asset_ids_or_empty.trace  over_statements_or_empty.trace
dev/test_data/test_over_X_or_empty/environment/on_maximal.xml/: over_asset_administration_shells_or_empty.trace  over_concept_descriptions_or_empty.trace  over_submodels_or_empty.trace
dev/test_data/test_over_X_or_empty/operation/on_maximal.xml/: over_inoutput_variables_or_empty.trace  over_output_variables_or_empty.trace
dev/test_data/test_over_X_or_empty/range/on_maximal.xml/: over_description_or_empty.trace
dev/test_data/test_over_X_or_empty/relationshipElement/on_maximal.xml/: over_display_name_or_empty.trace
dev/test_data/test_over_X_or_empty/submodel/on_maximal.xml/: over_submodel_elements_or_empty.trace
dev/test_data/test_over_X_or_empty/submodelElementCollection/on_maximal.xml/: over_embedded_data_specifications_or_empty.trace  over_qualifiers_or_empty.trace  over_value_or_empty.trace
dev/test_data/test_over_X_or_empty/submodelElementList/on_maximal.xml/: over_value_or_empty.trace
dev/tests/: common.py  common_jsonization.py  common_xmlization.py  test_descend_and_pass_through_visitor.py  test_descend_once.py  test_for_over_X_or_empty.py  test_for_x_or_default.py  test_jsonization_of_classes_with_descendants.py  test_jsonization_of_concrete_classes.py  test_jsonization_of_concrete_classes_outside_container.py  test_jsonization_of_enums.py  test_xmlization_of_classes_with_descendants.py  test_xmlization_of_concrete_classes.py  test_xmlization_of_concrete_classes_outside_container.py
dev_scripts/: pyproject.toml  update_to_aas_core_meta_codegen.py
dev_scripts/code_gen/: codegen.py  download_aas_core_meta_model.py
dev_scripts/codegen/: __init__.py  codegen.py  download_aas_core_meta_model.py  meta_model.py
dev_scripts/codegen/snippets/: qualified_module_name.txt
(+133 files in other folders)
